src/htdocs/css/_button.scss
button {
  background: #f8f8f8;
  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 0%,
      rgba(0, 0, 0, 0.05) 100%);
  border: none;
  border-radius: 2px;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
  cursor: pointer;
  color: #333;
  font-family: 'helvetica neue', arial, sans-serif;
  font-size: 1em;
  line-height:1;
  margin: 4px 2px;
  padding: 1rem 2rem;
  position:relative; /* used by before/after selectors */
  text-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
  vertical-align: top;
  z-index: 2;

  &:hover {
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%,
        rgba(0, 0, 0, 0.1) 100%);
    color: #000;
    text-shadow:none;
  }

  &:active,
  &.selected {
    background-image: linear-gradient(to top,
        rgba(55, 55, 55, 0.1) 0%,
        rgba(55, 55, 55, 0.2) 85%,
        rgba(55, 55, 55, 0.4) 100%);
  }

  &.red {
    background-color: #E46554;
  }

  &.orange {
    background-color: #F59048;
  }

  &.yellow {
    background-color: #FFF066;
  }

  &.green {
    background-color: #58A973;
  }

  &.blue {
    background-color: #5393CA;
  }

  &.red,
  &.orange,
  &.green,
  &.blue {
    color: #fff;
    text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
  }

  &.yellow {
    color: #555;
    color: #836352;
    color: #74513F;
    text-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
  }

  &.disabled,
  &[disabled] {
    background: #ddd;
    box-shadow: none;
    color: rgba(0, 0, 0, 0.3);
    cursor: not-allowed;
    text-shadow: none;
    z-index: 1;
  }

  /* YES/NO icon styling */
  &.cancel,
  &.confirm {
    padding-left: 1em;
    padding-right: 4em;
    text-align: left;

    &:after {
      position: absolute;
      right: 0;
      top: 0;
      padding: 1rem 1.5rem;
      text-align: center;
      border-radius: 0 2px 2px 0;
      border-left: 1px solid rgba(0, 0, 0, 0.05);
      background: rgba(0, 0, 0, 0.05);
    }

    &.disabled:after,
    &[disabled]:after {
      border: none;
    }
  }

  &.confirm:after {
    content: '\2713';
  }

  &.cancel:after {
    content: 'x';
    font-weight: bold;
  }
}

.button-group {
  margin: 0;
  padding: 0;


  > button {
    border-radius: 0;
    float: left;
    margin: 0 0 0 -1px;

    &:first-child {
      margin: 0;
      border-bottom-left-radius: 2px;
      border-top-left-radius: 2px;
    }

    &:last-child {
      border-bottom-right-radius: 2px;
      border-top-right-radius: 2px;
    }

    &.disabled,
    &[disabled] {
      box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
    }
  }

  &:after {
    clear: both;
    content: '';
    display: block;
  }
}

@media screen and (min-width: $breakpoint-offcanvas) {
  button {
    font-size: 0.8125em;
  }
}

